booking healthy pet

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>petServiecs</artifactId>
 	<name>petServices</name>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>Pet service</description>
+	<description>Pet services</description>
 	<properties>
 		<java.version>21</java.version>
 		<projectlombok-lombok.version>1.18.30</projectlombok-lombok.version>
