--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/petServices?useSLL=false&serverTimezone=UTC  # Database URL
+    url: jdbc:mysql://localhost:3307/pet?useSLL=false&serverTimezone=UTC  # Database URL
     username: root  # Database username
-    password: huythang02  # Database password
+    password: 170803  # Database password
     driver-class-name: com.mysql.cj.jdbc.Driver  # MySQL driver class name
   jpa:
     hibernate:
